--- a/pom.xml
+++ b/pom.xml
@@ -10,9 +10,9 @@
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com</groupId>
-	<artifactId>mock-9</artifactId>
+	<artifactId>mock-10</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>mock-9</name>
+	<name>mock-10</name>
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
@@ -106,10 +106,32 @@
 
 	<build>
 		<plugins>
+			<!-- springboot 项目打包配置 -->
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+
+
+			<!-- testNg 自动化项目打包/执行case配置 -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.20.1</version>
+				<!--作为DOM对象的配置 -->
+				<configuration>
+					<suiteXmlFiles>
+						<!-- testNg 配置文件位置 -->
+						<suiteXmlFile>src/main/resources/testng.xml</suiteXmlFile>
+						<suiteXmlFile>src/main/resources/testng1.xml</suiteXmlFile>
+					</suiteXmlFiles>
+
+				</configuration>
+
+			</plugin>
+
+
+
 		</plugins>
 	</build>
 
