--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,37 @@
 			<version>262</version>
 		</dependency>
 		<!-- ssh相关结束 -->
+		<!-- 依赖velocity ReportNG ReportNG本身又有对velocity和guice这两个东西有依赖 开始 -->
+		<!-- <dependency> <groupId>velocity</groupId> <artifactId>velocity-dep</artifactId> 
+			<version>1.4</version> </dependency> -->
+		<dependency>
+			<groupId>org.apache.velocity</groupId>
+			<artifactId>velocity</artifactId>
+			<version>1.7</version>
+		</dependency>
+		<!-- 依赖Guice -->
+		<dependency>
+			<groupId>com.google.inject</groupId>
+			<artifactId>guice</artifactId>
+			<!-- <version>3.0</version> -->
+			<version>4.1.0</version>
+			<scope>test</scope>
+		</dependency>
+
+		<!-- 依赖reportNg 关联testNg -->
+		<dependency>
+			<groupId>org.uncommons</groupId>
+			<artifactId>reportng</artifactId>
+			<version>1.1.4</version>
+			<scope>test</scope>
+			<exclusions>
+				<exclusion>
+					<groupId>org.testng</groupId>
+					<artifactId>testng</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		<!-- 依赖velocity ReportNG ReportNG本身又有对velocity和guice这两个东西有依赖 结束 -->
 
 	</dependencies>
 
@@ -125,9 +156,23 @@
 						<suiteXmlFile>src/main/resources/testng.xml</suiteXmlFile>
 						<suiteXmlFile>src/main/resources/testng1.xml</suiteXmlFile>
 					</suiteXmlFiles>
+					<!-- Setting ReportNG listeners <properties> <property> <name>listener</name> 
+						<value>org.uncommons.reportng.HTMLReporter, org.uncommons.reportng.JUnitXMLReporter 
+						</value> </property> </properties> -->
 
+
+					<!-- ReportNG配置 -->
+					<properties>
+						<property>
+							<name>usedefaultlisteners</name>
+							<value>false</value>
+						</property>
+						<property>
+							<name>listener</name>
+							<value>org.uncommons.reportng.HTMLReporter</value>
+						</property>
+					</properties>
 				</configuration>
-
 			</plugin>
 
 
