--- a/pom.xml
+++ b/pom.xml
@@ -153,9 +153,11 @@
 				<configuration>
 					<suiteXmlFiles>
 						<!-- testNg 配置文件位置 -->
-						<suiteXmlFile>src/main/resources/testng.xml</suiteXmlFile>
-						<suiteXmlFile>src/main/resources/testng1.xml</suiteXmlFile>
+						<suiteXmlFile>src/main/resources/testngmaventest.xml</suiteXmlFile>
 					</suiteXmlFiles>
+					<!-- testNg 串行执行case 未测试-->
+					<forkCount>1</forkCount>
+                    <reuseForks>false</reuseForks>
 					<!-- ReportNG配置 -->
 					<properties>
 						<property>
