--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -3,7 +3,7 @@ server:
 spring:
   datasource:
     username: root
-    password:  
+    password: 123456
     url: jdbc:mysql://127.0.0.1:3306/atcrowdfunding-v?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
     driver-class-name: com.mysql.jdbc.Driver
  
